# LerobotDatasetV2_recorder_node

./: README.md
lerobot_dataset_v2_recorder_node/: CMakeLists.txt  package.xml
lerobot_dataset_v2_recorder_node/resources/: info_template.json
lerobot_dataset_v2_recorder_node/src/: recorder_node.cpp
